Fix overflow issue in Firefox
@neatonseatimes I noticed some bugs in FF this morning, but this should fix. Can you test and republish?

--- a/src/css/quiz.less
+++ b/src/css/quiz.less
@@ -65,6 +65,10 @@ button {
     width: 65%;
     float: left;
     margin-right: 40px;
+    
+    img {
+      width: 100%;
+    }
 
     @media @break {
       width: 100%;
